--- a/notes_and_tools.html
+++ b/notes_and_tools.html
@@ -36,6 +36,19 @@
     <link rel="stylesheet" href="_static/pystar.css" type="text/css" /> 
     <link rel="stylesheet" href="_static/css/twitter-mentions.css" type="text/css" />
     <link rel="stylesheet" href="_static/tablesorter_blue_skin/style.css" type="text/css" /> 
+    <script type="text/javascript">
+
+  var _gaq = _gaq || [];
+  _gaq.push(['_setAccount', 'UA-27597337-1']);
+  _gaq.push(['_trackPageview']);
+
+  (function() {
+    var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+    ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+    var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+  })();
+
+</script>
 
 
   </head>
