not the way to do it

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
     </div>
 
     <div style="position: absolute; top:0px; right:0px">
-    <a href="https://github.com/pystar/pystar"><img src="_static/img/forkme_right_darkblue_121621.png" /></a>
+    <a href="https://github.com/pystar/pystar" target="_blank"><img src="_static/img/forkme_right_darkblue_121621.png" /></a>
     </div>
 
     <div class="content-wrapper">
